--- a/_episodes_rmd/03-fittingLogistic.Rmd
+++ b/_episodes_rmd/03-fittingLogistic.Rmd
@@ -193,4 +193,48 @@ effect_plot(SmokeNow_Age, pred = Age, plot.points = TRUE,
 > {: .solution}
 {: .challenge}
 
-
+> ## Changing the direction of coding in the outcome variable
+> In this episode, the outcome variable `SmokeNow` was modelled with
+> "Yes" as "success" and "No" as failure. The "success" and "failure"
+> designations are arbitrary and merely convey the baseline and alternative
+> levels for our model. In other words, "No" is taken as the baseline level
+> and "Yes" is taken as the alternative level. As a result, our coefficients 
+> relate to the probability of individuals still smoking. Recall that this
+> direction results from R taking the levels in alphabetical order.
+> 
+> If we wanted to, we could change the direction of coding. As a result, our
+> model coefficients would relate to the probability of no longer smoking. 
+> 
+> We do this using `mutate` and `relevel`. Inside `relevel`, we specify the 
+> new baseline level using `ref = "Yes"`. We then fit the model as before:
+> 
+> ```{r fit relevelled SmokeNow_Age}
+> SmokeNow_Age_Relevel <- dat %>%
+>   mutate(SmokeNow = relevel(SmokeNow, ref = "Yes")) %>%
+>   glm(formula = SmokeNow ~ Age, family = "binomial")
+> ```
+> 
+> Looking at the output from `summ()`, we see that the coefficients have changed:
+> 
+> ```{r summ SmokeNow_Age_Relevel}
+> summ(SmokeNow_Age_Relevel, digits = 5)
+> ```
+> 
+> The model equation therefor becomes:
+> 
+> $$\text{logit}(E(\text{SmokeNow})) = -2.60651 + 0.05423 \times \text{Age}.$$
+> 
+> Expressing the model in terms of the probability of success:
+> 
+> $$\text{Pr}(\text{SmokeNow} = \text{No}) = \text{logit}^{-1}(-2.60651 + 0.05423 \times \text{Age}).$$
+> 
+> And finally creating the effect plot:
+> 
+> ```{r effect plot SmokeNow_Age_Relevel}
+> effect_plot(SmokeNow_Age_Relevel, pred = Age, plot.points = TRUE,
+>             jitter = c(0.1, 0.05), point.alpha = 0.1) +
+>   ylab("Pr(SmokeNow = No)")
+> ```
+> 
+> 
+{: .callout}
