--- a/_episodes_rmd/01-introBinary.Rmd
+++ b/_episodes_rmd/01-introBinary.Rmd
@@ -58,7 +58,8 @@ of non-NA observations using `mutate()`.
 
 ```{r calculate probabilities SmokeNow_Age}
 dat %>%
-  drop_na(SmokeNow) %>%
+  drop_na(SmokeNow) %>% # there are no empty rows in Age
+                        # so we only use drop_na on SmokeNow
   filter(between(Age, 55, 66)) %>%
   count(SmokeNow, name = "n") %>%
   mutate(prop = n/sum(n))
@@ -160,7 +161,7 @@ tibble(E_y = seq(0,1,length.out = 10000)) %>%
 
 In mathematical notation, the log odds is defined as:
 
-$$\text{log}\left(\frac{E(y)}{1-E(y)}\right)$$
+$$\text{log}\left(\frac{E(y)}{1-E(y)}\right).$$
 
 
 
