--- a/_episodes_rmd/01-introBinary.Rmd
+++ b/_episodes_rmd/01-introBinary.Rmd
@@ -17,7 +17,7 @@ questions:
   - "How can we calculate and interpret the odds?"
   - "How can we calculate and interpret the log odds?"
 teaching: 40
-execises: 20
+exercises: 20
 ---
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
