--- a/_episodes_rmd/03-fittingLogistic.Rmd
+++ b/_episodes_rmd/03-fittingLogistic.Rmd
@@ -20,7 +20,7 @@ questions:
   - "How can we interpret the output of a logistic regression model in terms of the multiplicative change in the odds of success in R?"
   - "How can we visualise a logistic regression model in R?"
 teaching: 25
-execises: 25
+exercises: 25
 ---
 
 ```{r, include=FALSE}
